0004831: 查看问题的回答应该点击整个回答框都能进入详情界面

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
@@ -13,9 +13,9 @@
 	</head>
 
 	<body>
-		<nav class="mui-bar mui-bar-tab" style="background: white;box-shadow: none;padding-top: 6px;">
+		<nav id="answer-comment" class="mui-bar mui-bar-tab" style="background: white;box-shadow: none;padding-top: 6px;">
 			<span class="mui-icon iconfont icon-xie mui-pull-left" style="color: gray;line-height: 34px;padding: 0px;margin-left: 10px;margin-right: 10px;"></span>
-			<div id="answer-comment" style="line-height: 34px;border: 1px solid #D9D9D9;margin-left: 50px;margin-right: 10px;padding-left: 25px;color: gray;border-radius: 3px;">
+			<div  style="line-height: 34px;border: 1px solid #D9D9D9;margin-left: 50px;margin-right: 10px;padding-left: 25px;color: gray;border-radius: 3px;">
 				<font id="tab_font">请输入答案评论</font>
 			</div>
 		</nav>
