--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -139,12 +139,13 @@
 		<div class="mui-content">
 			<div align="center">
 				<img id="group-img" src="../../image/dynamic/u101.png" class="head-portrait" /><br />
+				<div id='account'>15069123759</div>
 			</div>
 			<form id='login-form' class="mui-input-group">
-				<div class="mui-input-row row1">
+				<!--<div class="mui-input-row row1">
 					<!--<label style="font-size: 15px;">账号</label>-->
-					<input id='account' type="text" class="mui-input-clear mui-input" placeholder="账号/手机号码">
-				</div>
+					<!--<input id='account' type="text" class="mui-input-clear mui-input" placeholder="账号/手机号码">-->
+				<!--</div>-->
 				<div class="mui-input-row ">
 					<!--<label style="font-size: 15px;">密码</label>-->
 					<input id='password' type="password" class="mui-input-clear mui-input " placeholder="密码">
