作业主界面的下划线

--- a/JiaoBaoYun-hb/html/homework/homework-tea.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea.html
@@ -27,7 +27,7 @@
 		    <!--更多按钮-->
 		   	<a id="more" class="mui-icon  mui-icon-bars mui-pull-right display-none" href="#popover"></a>
 		   	<!--相机按钮-->
-		    <a id="icon-camero" class="mui-icon iconfont icon-xiangji mui-pull-right"></a>
+		    <a id="icon-camero" class="mui-icon iconfont icon-xiangji  mui-pull-right display-none"></a>
 		</header>
 		
 		<script src="../../js/mui.min.js"></script>
