--- a/JiaoBaoYun-hb/html/homework/homework-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea-sub.html
@@ -18,32 +18,38 @@
 
 	<body>
 		<!--下拉菜单-->
-		  <div id="popover" class="mui-popover">
-				<ul class=" mui-table-view">
-			    	  <li id="err" class="mui-table-view-cell"><a class="mui-icon iconfont icon-shubendisc" href="">错题本</a></li>
-			    	  <li id="record" class="mui-table-view-cell"><a class="mui-icon iconfont icon-shezhi1" href="">作业记录</a></li>
-			    </ul>
-	    </div>
-	    <div class="mui-content">
-	    	<!--班级选择状态条-->
-	        <div id="tabs-class" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
-			    <div id="scroll-class" class="mui-scroll tabs-classes">
-						
-			    </div>
-			</div>
+		<div id="popover" class="mui-popover">
+			<ul class=" mui-table-view">
+				<li id="err" class="mui-table-view-cell">
+					<a class="mui-icon iconfont icon-shubendisc" href="">错题本</a>
+				</li>
+				<li id="record" class="mui-table-view-cell">
+					<a class="mui-icon iconfont icon-shezhi1" href="">作业记录</a>
+				</li>
+			</ul>
+		</div>
+		<div class="mui-content">
+		<!--	<div id="slider" class="mui-slider mui-fullscreen">-->
+				<!--班级选择状态条-->
+				<div id="tabs-class" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+					<div id="scroll-class" class="mui-scroll tabs-classes">
+
+					</div>
+				</div>
+			<!--</div>-->
 			<!--<img id="tempDetail" src="../../image/homework/other.png" />-->
-	    </div>
+		</div>
 		<!--下拉刷新容器-->
 		<!--<div id="refreshContainer" class="mui-scroll-wrapper">-->
-		  <div  class="mui-scroll">
-		    <!--数据列表-->
-		    <ul id="list-container" class="mui-table-view">
-		      
-		    </ul>
-		  </div>
-	<!--</div>-->
+		<div class="mui-scroll">
+			<!--数据列表-->
+			<ul id="list-container" class="mui-table-view">
+
+			</ul>
+		</div>
+		<!--</div>-->
 		<!--发布作业按钮-->
-		<a id="iconPublish" class="mui-icon iconfont icon-tianjia" ></a>
+		<a id="iconPublish" class="mui-icon iconfont icon-tianjia"></a>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
