调整个人头像，资料头像，群头像上传到七牛的方式

--- a/JiaoBaoYun-hb/html/mine/account-info.html
+++ b/JiaoBaoYun-hb/html/mine/account-info.html
@@ -10,11 +10,12 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
-		<style >
-			.mui-pull-right{
+		<style>
+			.mui-pull-right {
 				max-width: 70%;
 			}
-			.head-portrait{
+
+			.head-portrait {
 				min-width: 4rem;
 				min-height: 4rem;
 				max-width: 4rem;
@@ -122,17 +123,15 @@
 			</ul>
 		</div>-->
 		<script src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/qiniu/qiniu.js"></script>
+		<script type="text/javascript" src="../../js/utils/cryption.js"></script>
 		<script src="../../js/libs/myStorage/myStorage.js"></script>
 		<script src="../../js/storageKeyName.js"></script>
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/utils/camera.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<script src="../../js/utils/load.js"></script>
-		<!--<script type="text/javascript" src="../../js/qiniu/plupload.full.min.js"></script>-->
-		<!--<script type="text/javascript" src="../../js/qiniu/qiniu.js"></script>-->
-		<!--<script type="text/javascript" src="../../js/utils/QiNiuUtil.js"></script>-->
 		<script type="text/javascript" src="../../js/utils/CloudFileUtil.js"></script>
-		<script type="text/javascript" src="../../js/utils/events.js"></script>
 		<script type="text/javascript" src="../../js/cloud/AndroidFileSystem.js"></script>
 		<script type="text/javascript" src="../../js/utils/UploadHeadImage.js"></script>
 		<script src="../../js/mine/account-info.js"></script>
