--- a/JiaoBaoYun-hb/html/mine/qun_manage_info.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_info.html
@@ -14,6 +14,8 @@
 		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
 		<script src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/qiniu/qiniu.js"></script>
+		<script type="text/javascript" src="../../js/utils/cryption.js"></script>
 		<script type="text/javascript" src="../../js/utils/camera.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<script type="text/javascript" src="../../js/utils/CloudFileUtil.js"></script>
@@ -250,7 +252,7 @@
 					};
 					var gid = ''; //群id
 					// 等待的对话框
-					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+					var wd = events.showWaiting();
 					postDataPro_PostCrGrp(comData, wd, function(data) {
 						console.log('7.90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 						if(data.RspCode == 0) {
@@ -263,17 +265,16 @@
 									gimg: '', //群头像
 								});
 								mui.toast('创建群成功');
+								wd.close();
 								mui.back();
 							} else {
-								plus.nativeUI.showWaiting('正在加载中');
-								uploadQunHeadImge(data.RspData, qunImgPath, function(successCB) {
+								uploadQunHeadImge(wd, data.RspData, qunImgPath, function(successCB) {
 									changInfo({
 										gid: gid, //群id
 										gname: gname, //群名
 										gnote: gnote, //群说明
 										gimg: successCB, //群头像
 									});
-									plus.nativeUI.closeWaiting();
 									mui.toast('创建群成功');
 									mui.back();
 								}, function(errorCB) {
@@ -283,16 +284,15 @@
 										gnote: gnote, //群说明
 										gimg: '', //群头像
 									});
-									plus.nativeUI.closeWaiting();
-									mui.toast('创建群成功但是上传群头像失败：' + JSON.stringify(errorCB));
+									mui.toast('创建群成功,上传群头像失败：' + JSON.stringify(errorCB));
 									mui.back();
 								});
 							}
 						} else {
+							wd.close();
 							mui.toast(data.RspTxt);
 							console.log('创建群失败：' + data.RspTxt);
 						}
-						wd.close();
 					});
 				}
 
@@ -301,7 +301,6 @@
 				 */
 				function changInfo(data) {
 					events.fireToPageNone('qun_manage_1.html', 'createQun', data);
-					//events.fireToPageNone('/html/mine/qun_data.html', 'refreshView');
 					events.fireToPageNone('../cloud/cloud_home.html', 'getGroupList');
 				}
 
@@ -312,7 +311,7 @@
 				 * @param {Object} success 成功回调
 				 * @param {Object} error 失败回调
 				 */
-				function uploadQunHeadImge(qunId, qunImge, successCallBack, errorCallBack) {
+				function uploadQunHeadImge(wd, qunId, qunImge, successCallBack, errorCallBack) {
 					var fileName = 'qunheadimge' + qunId + '.png';
 					plus.zip.compressImage({
 							src: qunImge, //压缩转换原始图片的路径
@@ -327,93 +326,112 @@
 							var width = event.width; // 压缩转换后图片的实际宽度，单位为px
 							var height = event.height; // 压缩转换后图片的实际高度，单位为px
 							console.log('压缩图片成功---target:' + target + '|size:' + AndroidFileSystem.readSize(size) + '|width:' + width + '|height:' + height);
-							//openImage(target); //打开新页面查看图片
 							//获取七牛上传token的url
 							var getUploadTokenUrl = window.storageKeyName.QNGETUPTOKENHEADIMGE;
-							CloudFileUtil.getQNUpToken(getUploadTokenUrl, fileName, function(data) {
-								var QNUptoken = data.uptoken;
-								console.log('七牛上传token:' + QNUptoken);
-								//关闭等待窗口
-								//plus.nativeUI.closeWaiting();
-								CloudFileUtil.upload(target, QNUptoken, fileName, function(upload, status) {
-									//上传任务完成的监听
-									console.log('上传任务完成');
-									console.log('上传任务完成:' + status);
-									console.log('上传任务完成:' + JSON.stringify(upload));
-									plus.nativeUI.closeWaiting();
-									if(status == 200) { //上传任务成功
-										//存放头像的七牛域名
-										var domain = window.storageKeyName.QNHEADIMGEDOMAIN;
-										var myDate = new Date();
-										var gimgPath = domain + fileName + '?' + myDate.getTime();
-										//8.用户修改群各项信息
-										//需要参数
-										var comData2 = {
-											rid: qunId, //要修改的群id
-											vtp: 'gimg', //更改项，指更改用户信息的相应项,对应后面的vvl值,gimg(头像),gname(群名),gnote(群说明)
-											vvl: gimgPath, //要修改成的值
+							//私有空间或公有空间
+							var mainSpace = window.storageKeyName.QNPUBSPACE;
+							//头像上传的空间
+							var uploadSpace = window.storageKeyName.HEADIMAGE;
+							var getToken = {
+								type: '0', //str 必填 获取上传token的类型。0上传需要生成缩略图的文件；1上传文件
+								QNFileName: fileName, //str 必填 存放到七牛的文件名
+								appId: 5, //int 必填 项目id
+								mainSpace: mainSpace, //str 必填 私有空间或公有空间
+								uploadSpace: uploadSpace, //str 必填  上传的空间
+							}
 
-										};
-										//返回值model：model_groupList
-										// 等待的对话框
-										var wd2 = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-										postDataPro_PostReGinfo(comData2, wd2, function(data) {
-											wd2.close();
-											console.log('8_PostReGinfo:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-											if(data.RspCode == 0) {
-												successCallBack(gimgPath);
-											} else {
-												errorCallBack();
-												mui.toast(data.RspTxt);
-											}
-										});
-									} else { //上传失败
-										errorCallBack(data.responseText);
-									}
-								}, function(upload, status) {
-									//上传任务状态监听
-									//上传任务的标识
-									var id = upload.__UUID__;
-									//已完成上传数据的大小
-									var uploadedSize = AndroidFileSystem.readSize(upload.uploadedSize);
-									//上传数据的总大小
-									var totalSize = AndroidFileSystem.readSize(upload.totalSize);
-									//上传任务的状态
-									var uploadState = upload.state;
-									switch(uploadState) {
-										case 0: //上传任务开始调度
-											console.log('上传任务开始调度:|id:' + id + '|uploadState:' + uploadState);
-											break;
-										case 1: //上传任务开始请求
-											console.log('上传任务开始请求:|id:' + id + '|uploadState:' + uploadState);
-											break;
-										case 2: //上传任务请求已经建立
-											console.log('上传任务请求已经建立:|id:' + id + '|uploadState:' + uploadState);
-											break;
-										case 3: //上传任务提交数据
-											//console.log('上传任务状态监听:|id:' + id + '|uploadedSize:' + uploadedSize + '|totalSize:' + totalSize + '|uploadState:' + uploadState);
-											//var num = parseInt(upload.uploadedSize / upload.totalSize * 100) + '%';
-											//console.log(num);
-											//size.setTitle('正在上传 ' + num);
-											break;
-										case 4: //上传任务已完成
-											//console.log('上传任务已完成:|id:' + id + '|uploadState:' + uploadState);
-											break;
-										case 5: //上传任务已暂停
-											console.log('上传任务已暂停:|id:' + id + '|uploadState:' + uploadState);
-											break;
-										default:
-											console.log('上传任务状态监听:其他状态:' + uploadState);
-											break;
-									}
-								}, function(task) {
-									//上传任务创建成功的回调
-									task.start();
-								});
+							CloudFileUtil.getQNUpToken(getUploadTokenUrl, getToken, function(data) {
+								var QNUptoken = data.data; //token数据
+								var configure = data.configure; //获取token的配置信息
+								console.log('七牛上传token:' + JSON.stringify(QNUptoken));
+								if(QNUptoken.Status == 0) { //失败
+									mui.toast('获取上传凭证失败 ' + QNUptoken.Message);
+									console.log('### ERROR ### 请求上传凭证失败' + QNUptoken.Message);
+									wd.close();
+								} else {
+									CloudFileUtil.upload(target, QNUptoken.Data.Token, QNUptoken.Data.Key, function(upload, status) {
+										//上传任务完成的监听
+										console.log('上传任务完成:' + status);
+										console.log('上传任务完成:' + JSON.stringify(upload));
+										if(status == 200) { //上传任务成功
+											//头像类型,个人头像0，资料头像1，群头像2
+											var thumb = QNUptoken.Data.OtherKey[configure.thumbKey]; //缩略图地址
+											var domain = QNUptoken.Data.Domain + QNUptoken.Data.Key; //文件地址
+											console.log(thumb);
+											console.log(domain);
+											var myDate = new Date();
+											var gimgPath = thumb + '?' + myDate.getTime();
+											//8.用户修改群各项信息
+											//需要参数
+											var comData2 = {
+												rid: qunId, //要修改的群id
+												vtp: 'gimg', //更改项，指更改用户信息的相应项,对应后面的vvl值,gimg(头像),gname(群名),gnote(群说明)
+												vvl: gimgPath, //要修改成的值
+
+											};
+											//返回值model：model_groupList
+											// 等待的对话框
+											var wd2 = events.showWaiting();
+											postDataPro_PostReGinfo(comData2, wd2, function(data) {
+												console.log('8_PostReGinfo:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+												if(data.RspCode == 0) {
+													successCallBack(gimgPath);
+												} else {
+													errorCallBack();
+													mui.toast(data.RspTxt);
+												}
+												wd.close();
+												wd2.close();
+											});
+										} else { //上传失败
+											errorCallBack(upload.responseText);
+											wd.close();
+										}
+									}, function(upload, status) {
+										//上传任务状态监听
+										//上传任务的标识
+										var id = upload.__UUID__;
+										//已完成上传数据的大小
+										var uploadedSize = AndroidFileSystem.readSize(upload.uploadedSize);
+										//上传数据的总大小
+										var totalSize = AndroidFileSystem.readSize(upload.totalSize);
+										//上传任务的状态
+										var uploadState = upload.state;
+										switch(uploadState) {
+											case 0: //上传任务开始调度
+												console.log('上传任务开始调度:|id:' + id + '|uploadState:' + uploadState);
+												break;
+											case 1: //上传任务开始请求
+												console.log('上传任务开始请求:|id:' + id + '|uploadState:' + uploadState);
+												break;
+											case 2: //上传任务请求已经建立
+												console.log('上传任务请求已经建立:|id:' + id + '|uploadState:' + uploadState);
+												break;
+											case 3: //上传任务提交数据
+												//console.log('上传任务状态监听:|id:' + id + '|uploadedSize:' + uploadedSize + '|totalSize:' + totalSize + '|uploadState:' + uploadState);
+												//var num = parseInt(upload.uploadedSize / upload.totalSize * 100) + '%';
+												//console.log(num);
+												//size.setTitle('正在上传 ' + num);
+												break;
+											case 4: //上传任务已完成
+												//console.log('上传任务已完成:|id:' + id + '|uploadState:' + uploadState);
+												break;
+											case 5: //上传任务已暂停
+												console.log('上传任务已暂停:|id:' + id + '|uploadState:' + uploadState);
+												break;
+											default:
+												console.log('上传任务状态监听:其他状态:' + uploadState);
+												break;
+										}
+									}, function(task) {
+										//上传任务创建成功的回调
+										task.start();
+									});
+								}
 							}, function(xhr, type, errorThrown) {
-								plus.nativeUI.closeWaiting();
-								mui.toast('获取七牛上传token失败：' + type);
-								console.log('获取七牛上传token失败：' + type);
+								wd.close();
+								mui.toast('请求上传凭证失败 ' + type);
+								console.log('### ERROR ### 请求上传凭证失败' + type);
 							});
 						},
 						function(error) {
@@ -423,7 +441,7 @@
 							mui.toast('图片压缩失败！' + '错误编码：' + code + '描述信息：' + message);
 							console.log('图片压缩失败！' + JSON.stringify(error));
 							//关闭等待窗口
-							plus.nativeUI.closeWaiting();
+							wd.close();
 						}
 					);
 				}
