--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -138,14 +138,16 @@
 		</header>
 		<div class="mui-content">
 			<div align="center">
-				<img id="group-img" src="../../image/dynamic/u101.png" class="head-portrait" /><br />
-				<div id='account'>15069123759</div>
+				<!--<img id="group-img" src="../../image/dynamic/u101.png" class="head-portrait" /><br />
+				<div id='account'>15069123759</div>-->
+				
 			</div>
 			<form id='login-form' class="mui-input-group">
-				<!--<div class="mui-input-row row1">
-					<!--<label style="font-size: 15px;">账号</label>-->
-					<!--<input id='account' type="text" class="mui-input-clear mui-input" placeholder="账号/手机号码">-->
-				<!--</div>-->
+				<p></p>
+				<div class="mui-input-row row1">
+					<label style="font-size: 15px;">账号</label>
+					<input id='account' type="text" class="mui-input-clear mui-input" placeholder="账号/手机号码">
+				</div>
 				<div class="mui-input-row ">
 					<!--<label style="font-size: 15px;">密码</label>-->
 					<input id='password' type="password" class="mui-input-clear mui-input " placeholder="密码">
@@ -296,7 +298,7 @@ none; margin-top: -15px;">登录</button>
 					var moreButton = doc.getElementById('more');
 					//如果之前登录成功，则重新获取token，获取个人信息，则为登录成功
 					var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
-					if(personal.isLogin == 1) {
+					if(personal) {
 						//需要参数
 						var comData = {
 							uuid: plus.device.uuid,
