--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -281,7 +281,7 @@
 										var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 										tempInfo.isLogin = 1;
 										//修改自动登录值
-										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
+										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, null);
 										//退出登录
 										events.logOff();
 										//跳转到登录界面
