--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSearch.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSearch.html
@@ -48,7 +48,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="mui-scroll-wrapper mui-fullscreen  mui-hidden" style="z-index:0;" id="list-container" >
+			<div class="mui-scroll-wrapper mui-fullscreen  mui-hidden" style="z-index:0;" id="list-container">
 				<div class="mui-scroll">
 					<ul class="mui-table-view">
 						<!--<li class="mui-table-view-cell">
@@ -86,8 +86,11 @@
 			var flagRef = 0; //是刷新0，还是加载更多1
 			var keyWord = "";
 			var answerArray = []; //搜索总数组
+			var Storage_History = "qiuzhi-Question-History";
 			mui.init();
 			mui.plusReady(function() {
+				
+				Storage_History = Storage_History + "_" + window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
 				//注册列表项点击事件
 				mui('#list-container .mui-table-view').on('tap', 'li', function() {
 					//获取存储值
@@ -196,7 +199,7 @@
 			function LoadHistory() {
 				var history_container = mui("#history_container div ul")[0];
 				history_container.innerHTML = "";
-				var list_History = window.myStorage.getItem("qiuzhi-Question-History");
+				var list_History = window.myStorage.getItem(Storage_History);
 				mui.each(list_History, function(index, item) {
 					//显示节点
 					var li = document.createElement('li');
@@ -211,7 +214,7 @@
 					li.innerHTML = "<a><span class='mui-icon mui-icon-search'></span> <span>" + item.text + "</span><span class='mui-icon icon-del' ></span></a>";
 					history_container.insertBefore(li, history_container.firstChild);
 				});
-				if(list_History&&list_History.length > 0) {
+				if(list_History && list_History.length > 0) {
 					//					<li class="mui-table-view-cell">
 					//							<span> 清空历史记录</span>
 					//						</li>
@@ -227,13 +230,13 @@
 			 */
 			function setHistory(_keyWord) {
 				//存储历史记录开始
-				var list_History = window.myStorage.getItem("qiuzhi-Question-History");
+				var list_History = window.myStorage.getItem(Storage_History);
 				if(list_History) {
 
 				} else {
 					list_History = new Array();
 				}
- 
+
 				var d = new Date();
 				//清除掉重复的 追加上新的
 				//var model_History={text=""};
@@ -250,14 +253,14 @@
 					list_History.push({ text: keyWord });
 				}
 
-				window.myStorage.setItem("qiuzhi-Question-History", list_History);
+				window.myStorage.setItem(Storage_History, list_History);
 				//存储历史记录结束
 			}
 			/**
 			 * 在搜索历史中移除某关键字
 			 */
 			function HistoryItemRemove(_keyWord) {
-				var list_History = window.myStorage.getItem("qiuzhi-Question-History");
+				var list_History = window.myStorage.getItem(Storage_History);
 				if(list_History) {
 
 				} else {
@@ -272,7 +275,7 @@
 					}
 					int_index++;
 				});
-				window.myStorage.setItem("qiuzhi-Question-History", list_History);
+				window.myStorage.setItem(Storage_History, list_History);
 			}
 			/*
 			 * 清除搜索历史
@@ -280,7 +283,7 @@
 			function CleanHistory() {
 				//清除历史记录
 				var list_History = new Array();
-				window.myStorage.setItem("qiuzhi-Question-History", list_History);
+				window.myStorage.setItem(Storage_History, list_History);
 				//刷新历史记录显示
 
 			}
