--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSearch.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSearch.html
@@ -27,7 +27,7 @@
 			<div class="mui-scroll-wrapper mui-fullscreen" id="history_container">
 				<div class="mui-scroll">
 					<ul class="mui-table-view">
-						<!--<li class="mui-table-view-cell">
+						<li class="mui-table-view-cell">
 							<a>
 								<span class="mui-icon mui-icon-search"></span> <span> Item 1</span><span class="mui-icon icon-del"></span>
 							</a>
@@ -44,7 +44,7 @@
 						</li>
 						<li class="mui-table-view-cell">
 							<span> 清空历史记录</span>
-						</li>-->
+						</li>
 					</ul>
 				</div>
 			</div>
