调整展现逻辑

--- a/JiaoBaoYun-hb/html/sciedu/sciedu_home.html
+++ b/JiaoBaoYun-hb/html/sciedu/sciedu_home.html
@@ -363,7 +363,7 @@
 						}
 					} else {
 						eduArray = [];
-						mui.toast(data.RspTxt);
+						//mui.toast(data.RspTxt);
 					}
 					if(eduArray.length == 0) {
 						var uarea = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).uarea;
