--- a/JiaoBaoYun-hb/html/homework/doHomework-stu.html
+++ b/JiaoBaoYun-hb/html/homework/doHomework-stu.html
@@ -56,6 +56,7 @@
 				mui.previewImage();
 				window.addEventListener('homeworkInfo', function(e) {
 					CloudFileUtil.files = [];
+					events.clearChild(document.getElementById('pictures'));
 					personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
 					homeworkModel = e.detail.data;
 					var textView = document.getElementById('input-content');
@@ -65,6 +66,7 @@
 				})
 				window.addEventListener('workDetail', function(e) {
 					CloudFileUtil.files = [];
+					events.clearChild(document.getElementById('pictures'));
 					personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
 					homeworkModel = e.detail.data;
 					CloudFileUtil.rechargePicsData(homeworkModel.HomeworkResult.Files); 
