班级空间加载图片预览

--- a/JiaoBaoYun-hb/html/quan/classSpace-sub.html
+++ b/JiaoBaoYun-hb/html/quan/classSpace-sub.html
@@ -40,6 +40,8 @@
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/storageKeyName.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
+		<script src="../../js/mui.zoom.js"></script>
+		<script src="../../js/mui.previewimage.js"></script>
 		<script src="../../js/utils/h5fresh.js"></script>
 		<script src="../../js/utils/urlBrief.js"></script>
 		<script src="../../js/quan/class_space.js"></script>
