--- a/JiaoBaoYun-hb/html/quan/classSpace-sub.html
+++ b/JiaoBaoYun-hb/html/quan/classSpace-sub.html
@@ -6,6 +6,7 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<link href="../../css/utils/preview.css" rel="stylesheet" />
 		<link href="../../css/utils/bubble.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<link href="../../css/quan/class_space.css" rel="stylesheet" />
