--- a/JiaoBaoYun-hb/html/qiuzhi/AttentionPersons.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/AttentionPersons.html
@@ -16,12 +16,13 @@
 			<h1 class="mui-title">关注他的人</h1>
 		</header>
 		<!--下拉刷新容器-->
-		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
-			<div class="mui-scroll">
-				<!--数据列表-->
+		<div id="refreshContainer" class="mui-content mui-fullscreen" style="z-index:0">
+			<div class="mui-scroll-wrapper">
+				<div class="mui-scroll">
+					<ul id="list-container" class="mui-table-view">
 
-				<ul id="list-container" class="mui-table-view">
-				</ul>
+					</ul>
+				</div>
 			</div>
 		</div>
 
@@ -31,6 +32,9 @@
 		<script src="../../js/publicProtocol.js"></script>
 		<script src="../../js/publicQiuzhiProtocol.js"></script>
 		<script src="../../js/qiuzhi/attentionPersons.js"></script>
+		<script src="../../js/mui.pullToRefresh.js"></script>
+		<script src="../../js/mui.pullToRefresh.material.js"></script>
+		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 
 </html>
