--- a/JiaoBaoYun-hb/html/quan/classSpace-sub.html
+++ b/JiaoBaoYun-hb/html/quan/classSpace-sub.html
@@ -44,6 +44,8 @@
 		<script src="../../js/mui.zoom.js"></script>
 		<script src="../../js/mui.previewimage.js"></script>
 		<script src="../../js/utils/h5fresh.js"></script>
+		<script src="../../js/mui.pullToRefresh.js"></script>
+		<script src="../../js/mui.pullToRefresh.material.js"></script>
 		<script src="../../js/utils/urlBrief.js"></script>
 		<script src="../../js/quan/class_space.js"></script>
 	</body>
