老师普通作业详情 加预览后头像拉伸的问题 学生作业评价界面加作业图片

--- a/JiaoBaoYun-hb/html/homework/homework-commented.html
+++ b/JiaoBaoYun-hb/html/homework/homework-commented.html
@@ -68,6 +68,7 @@
 						</div>
 						<div class="mui-media-body">
 							<font id="homeWorkContent" style="color: #747474;"></font>
+							<div id="brief-imgs" class="brief-imgs"></div>
 							
 						</div>
 					</li>
@@ -75,7 +76,7 @@
 					<li id="stuCell" class="mui-table-view-cell">
 						<div class="mui-media-body">
 							<font id="stuResult" class="cell-color"></font>
-							<div id="brief-imgs" class="brief-imgs"></div>
+							<div id="brief-imgs-stu" class="brief-imgs"></div>
 						</div>
 					</li>
 					<li id="comment" class="mui-table-view-divider divider-color">作业评语</li>
