--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
@@ -40,7 +40,7 @@
 		<script src="../../js/publicQiuzhiProtocol.js"></script>
 		<script src="../../js/qiuzhi/qiuzhi-home.js"></script>
 	</body>
-
+<!--
 	<script type="text/javascript">
 		//mui.init();
 		//mui.plusReady(function() {
@@ -624,6 +624,6 @@
 				}
 			});
 		};
-	</script>
+	</script>-->
 
 </html>
